Fixed the use of some deprecated methods and some other warnings.